eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/FCU_Note__c.object
<CustomObject>
    <description>FCU work 30/11/2015</description>
    <fields>
        <fullName>Case_note__c</fullName>
        <label>Case note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_for_reminder__c</fullName>
        <description>109174</description>
        <label>Date for reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_case__c</fullName>
        <description>FCU work 30/11/2015</description>
        <label>Related case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>FCU Notes</relationshipLabel>
        <relationshipName>FCU_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>FCU Note</label>
    <nameField>
        <displayFormat>FCUN{0000}</displayFormat>
        <label>FCU Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCU Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>